# codeai-ice

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/source/: conf.py
docs/source/advanced/: optimization_tutorial.ipynb
docs/source/benchmark/: TCM_sota.tar  ad_benchmark_gnn.ipynb  ad_benchmark_stgat.ipynb  ad_benchmark_transformer.ipynb  fd_benchmark_tcn.ipynb  hi_sota.ipynb  index.rst  rul_sota.ipynb  rul_sota.tar  stack_sota.tar  tcn_fault_diagnosis_epoch_30.tar  transformer_anomaly_detection_epoch_30.tar
docs/source/custom/: custom_data.rst
ice/: base.py
ice/anomaly_detection/: datasets.py  metrics.py  utils.py
ice/anomaly_detection/models/: __init__.py  autoencoder.py  base.py  gnn.py  stgat.py  transformer.py
ice/configs/: __init__.py
ice/configs/anomaly_detection/: default_autoencoder.yaml  default_gnn.yaml  default_stgat.yaml  default_transformer.yaml
ice/configs/fault_diagnosis/: default_mlp.yaml  default_tcn.yaml
ice/configs/health_index_estimation/: IE_SBiGRU.yaml  Stacked_LSTM.yaml  TCM.yaml  default_mlp.yaml
ice/configs/remaining_useful_life_estimation/: default_ir.yaml  default_lstm.yaml  default_mlp.yaml  default_rvae.yaml
ice/fault_diagnosis/: datasets.py  metrics.py  utils.py
ice/health_index_estimation/: datasets.py  metrics.py  utils.py
ice/remaining_useful_life_estimation/: datasets.py  metrics.py
ice/tests/: test_anomaly_detection.py  test_config.py  test_fault_diagnosis.py  test_health_index_estimation.py  test_remaining_useful_life_estimation.py
(+19 files in other folders)
